--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,13 +6,14 @@
 }
 
 body {
-    background-color: #5372ef;    
+    background-color: #8399f0;     
 }
 
 .container{
     width: 90%;
     max-width: 75em;
-    background-color: #ffffff;
+    background-image: url("../img/granja.jpg");
+    background-size: cover;
     padding: 3em 0.5em;
     position: absolute;
     transform: translate(-50%, -50%);
@@ -52,6 +53,7 @@ h3{
     border-radius: 8em;
     text-align: center;
     text-transform: uppercase;
+    background-color: white;
 }
 
 .divAnimal{
@@ -85,7 +87,7 @@ img {
     justify-content: center;
     height: 100%;
     width: 100%;
-    background-color: #5372ef;
+    background-color: #8399f0; 
     flex-direction: column;
     top: 0;
 }
