--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,9 +6,34 @@
 }
 
 body {
-    background-color: #8399f0;     
+    background-image: url("../img/granja.jpg");
+
+    background-size: cover;
+
 }
 
+
+.final-screen{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    max-width: 150em;
+    max-height: 100em;
+    background-image: url("../img/Final.jpg");
+    background-size: cover;
+    padding: 3em 0.5em;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 0.8em;
+   
+
+    display: flex;
+
+    flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+}
 .container{
     width: 90%;
     max-width: 75em;
@@ -26,7 +51,7 @@ h3{
     text-align: center;
     width: 60%;
     margin: 0 auto 2em auto;
-    font-size: 1.2em;
+    font-size: 3em;
     font-weight: 600;
     letter-spacing: 0.03em;
     line-height: 1.8em;
@@ -81,15 +106,22 @@ img {
 }
 
 .controls-container{
-    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
     width: 100%;
-    background-color: #8399f0; 
     flex-direction: column;
     top: 0;
+    background-image: url("../img/granja.jpg");
+
+    background-size: cover;
+    padding: 3em 0.5em;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 0.8em;
+    position: fixed;
 }
 
 .controls-container button{
@@ -112,3 +144,42 @@ img {
 .hide{
     display: none;
 }
+
+
+.registro {
+    width: 500px;
+    height: 500px;
+    margin-top: 20px;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    backdrop-filter: blur(20px);
+  }
+  
+  .registro label, .registro input[type="text"], button {
+    display: block;
+    margin: 10px auto;
+    color: rgb(255, 255, 255);
+  }
+  
+  .registro input[type="text"] {
+    background-color: #FFB703;
+    color: white;
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  
+  button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: black;
+    color: white;
+  }
