--- a/css/estilos.css
+++ b/css/estilos.css
@@ -15,6 +15,7 @@ body {
 
 .container, .registro{
     width: 90%;
+    height: 80%;
     max-width: 75em;
     background-image: url("../img/granja.jpg");
     background-size: cover;
@@ -35,6 +36,7 @@ h3{
     letter-spacing: 0.03em;
     line-height: 1.8em;
     color: #fcfcfc;
+    text-shadow: 2px 2px 3px black;
 }
 
 .draggable-objects, .drop-points{
@@ -85,15 +87,25 @@ img {
 }
 
 .controls-container{
+    width: 90%;
+    height: 80%;
+    max-width: 75em;
+    background-size: cover;
+    padding: 3em 0.5em;
     position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 0.8em;
+    flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
-    background-color: #8399f0; 
-    flex-direction: column;
-    top: 0;
+}
+
+#juego .controls-container {
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
 }
 
 .control {
@@ -105,6 +117,32 @@ img {
     left: 85%;
     top: 0;
     margin: 25px;
+}
+
+.controlPuntos {
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    position: absolute;
+    width: 15%;
+    height: 8%;
+    left: 2%;
+    top: 0;
+    margin: 25px;
+}
+
+.difuminado {
+    -webkit-backdrop-filter: blur(50px);
+    backdrop-filter: blur(50px);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    max-width: 75em;
+    padding: 3em 0.5em;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 0.8em;
+    text-shadow: 2px 2px 3px black;
 }
 
 .controls-container button, .container .control button {
